--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "cognitiveloadestimator",
   "displayName": "CognitiveLoadEstimator",
+  "publisher": "paulazzopardi",
   "description": "Utilize eye tracker data to determine cognitive load and give the user suggestions to reduce cognitive load.",
   "version": "0.0.1",
   "engines": {
@@ -12,6 +13,10 @@
   "activationEvents": [
     "*"
   ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/paulazzo8711/cognitiveloadestimator"
+  },
   "main": "./out/extension.js",
   "contributes": {
     "configuration": {
