--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "publisher": "paulazzopardi",
   "description": "Utilize eye tracker data to determine cognitive load and give the user suggestions to reduce cognitive load.",
   "version": "1.0.0",
-  "icon": "/images/GCL_Icon.png",
+  "icon": "images/CGL_Icon.jpg",
   "engines": {
     "vscode": "^1.86.0"
   },
