--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "displayName": "CognitiveLoadEstimator",
   "publisher": "paulazzopardi",
   "description": "Utilize eye tracker data to determine cognitive load and give the user suggestions to reduce cognitive load.",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "icon": "images/CGL_Icon.jpg",
   "engines": {
     "vscode": "^1.86.0"
@@ -12,7 +12,7 @@
     "Other"
   ],
   "activationEvents": [
-    "*"
+    "onStartupFinished"
   ],
   "repository": {
     "type": "git",
