added stopestimation function, conditionally changed information message depending on increase, decrease or stable cognitive load, and if considered high suggest what to do to decrease cognitive load, added begin estimating cognitive load text when calculating result and displaying old cognitive load in status bar if available. Updated icon. | Version 2.1.0

--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "displayName": "CognitiveLoadEstimator",
   "publisher": "paulazzopardi",
   "description": "Utilize eye tracker data to determine cognitive load and give the user suggestions to reduce cognitive load.",
-  "version": "1.1.1",
-  "icon": "images/CGL_Icon.jpg",
+  "version": "2.1.0",
+  "icon": "images/CognitiveLoadEstimator_Icon.jpg",
   "engines": {
     "vscode": "^1.86.0"
   },
