--- a/package.json
+++ b/package.json
@@ -74,8 +74,6 @@
   },
   "dependencies": {
     "axios": "^1.6.7",
-    "exceljs": "^4.4.0",
-    "form-data": "^4.0.0",
-    "xml2js": "^0.6.2"
+    "form-data": "^4.0.0"
   }
 }
