--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "displayName": "CognitiveLoadEstimator",
   "publisher": "paulazzopardi",
   "description": "Utilize eye tracker data to determine cognitive load and give the user suggestions to reduce cognitive load.",
-  "version": "3.1.0",
+  "version": "3.2.0",
   "icon": "images/CognitiveLoadEstimator_Icon.jpg",
   "engines": {
     "vscode": "^1.86.0"
@@ -43,6 +43,11 @@
           "default": "",
           "description": "Path to the directory containing Excel files for cognitive load estimation when 'Excel' mode is selected. Ignored if 'API' is chosen.",
           "scope": "resource"
+        },
+        "cognitiveloadestimator.threshold": {
+          "type": "number",
+          "default": 20,
+          "description": "Set a threshold for cognitive load alerts. Alerts will be shown only when the cognitive load is above this value."
         }
       }
     },
